...
            }
            
            if description.showBlockAction {
                if description.isSenderBlocked {
                    Action.destructive(
                        systemImage: "person.slash",
                        title: "Unblock",
                        action: { try await blockAction(blocked: description.isSenderBlocked, description) }
                    )
                } else {
                    Action.destructive(
                        systemImage: "person.slash",
                        title: "Block",
                        action: { try await blockAction(blocked: description.isSenderBlocked, description) }
                    )
                }
            }
        }
    }
...
        }
        .animation(.easeInOut(duration: 0.2), value: replyMessage)
    }
    
    @ViewBuilder private func mutedView() -> some View {
        VStack {
            Text("You've been muted")
                .font(.appTextMedium)
                .foregroundStyle(Color.textSecondary)
                .multilineTextAlignment(.center)
        }
        .padding(.horizontal, 20)
        .frame(height: 50)
...
